nginx-ingress-subpath/test-stack/ingress-test/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-test
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
