nginx-ingress-subpath/test-stack/ingress-test/echo-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-test
  name: echo
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: echo
