nginx-ingress-subpath/test-stack/ingress-test/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-test
  name: nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx
